...
              elevation: 8,
              borderRadius: 999,
              backgroundColor: "rgba(229, 54, 75, 0.2)",
            }}
          >
            <HapticPressable
              testID="sign-in-button"
              onPress={handleSubmit(onSubmit)}
              disabled={isSubmitting}
              hapticType="medium"
              style={{
                borderRadius: 999,
                overflow: "hidden",
...
